tests/toylang/neg/001171_mutation.toylang
program a = { 0 = a; } .
